[EFL] EFL's LayoutTestController does not support titleTextDirection https://bugs.webkit.org/show_bug.cgi?id=86475

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-06-15
Reviewed by Hajime Morita.

Source/WebKit/efl:

Emit the "title,changed" signal even if the title direction has
changed but not its text.

* ewk/ewk_frame.cpp:
(ewk_frame_title_set):

Tools:

Add titleTextDirection getter and setter to LayoutTestController and
expose its value to JavaScript.
Update the titleTextDirection value from EFL's "title,changed"
callback in DumpRenderTree.

* DumpRenderTree/LayoutTestController.cpp:
(LayoutTestController::LayoutTestController):
(getTitleTextDirectionCallback):
(LayoutTestController::staticValues):
* DumpRenderTree/LayoutTestController.h:
(LayoutTestController::titleTextDirection):
(LayoutTestController::setTitleTextDirection):
(LayoutTestController):
* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::onFrameTitleChanged):

LayoutTests:

Unskip title-directionality tests now that EFL's LayoutTestController
supports titleTextDirection.

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/107042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120428 268f45cc-cd09-0410-ab3c-d52691b4dbfc